# product-processor

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  daemon.py  exception.py  geolocation.py  media_types.py  publisher.py  resources.py  rpc.py
app/commands/: __init__.py  cli.py  console.py  main.py
app/converters/: __init__.py  airep.py  base.py  csfpf.py  cwa.py  gfa.py  madis.py  metar.py  mis.py  pirep.py  sigmet.py  spcwatch.py  swb.py  taf.py  tca.py  tcf.py  vaa.py  wta.py
app/extractors/: __init__.py  airep.py  base.py  cap.py  csfpf.py  cwa.py  madis.py  metar.py  mis.py  pirep.py  saw.py  sel.py  sigmet.py  swb.py  taf.py  tca.py  tcf.py  vaa.py  wta.py
app/handlers/: __init__.py  airep.py  base.py  cap.py  csfpf.py  cwa.py  fws.py  gfa.py  madis.py  metar.py  mis.py  nwstg.py  pirep.py  sigmet.py  spc.py  stq.py  swb.py  taf.py  tca.py  tcf.py  vaa.py  wta.py
app/spot/: __init__.py
app/spot/fws/: fws.py
app/spot/stq/: stq.py  template.py
app/spot/stq/templates/: product.stq
app/util/: madis.py  parser.py  splitter.py
published/: CAE_2303724.stq  LIX_2303698.stq  sample_spot_request.json
scripts/: ngitws-product-processor.service
tests/: conftest.py
tests/fixtures/sample_files/: gfa.g3
tests/unit/app/converters/: test_airep.py  test_csfpf.py  test_cwa.py  test_gfa.py  test_madis.py  test_metar.py  test_mis.py  test_pirep.py  test_sigmet.py  test_spcwatch.py  test_swb.py  test_taf.py  test_tca.py  test_tcf.py  test_vaa.py  test_wta.py
tests/unit/app/extractors/: test_airep.py  test_cap.py  (+15 more)
(+13 files in other folders)
